# mortar

./: CMakeLists.txt  mainwindow.cpp  mise.toml  mortar.code-workspace  serialconnection.h  settingsdialog.cpp  settingsdialog.ui
.github/workflows/: gradle.yml
Mortar.Dashboard/Views/: ConnectionDialog.axaml  ConnectionDialog.axaml.cs  LoadingScreen.axaml  LoadingScreen.axaml.cs
mortar-gui/: settings.gradle.kts
mortar-gui/app/: build.gradle.kts
mortar-gui/app/src/main/java/mortar/gui/: App.java  CommWindow.java  ConnectionDialog.java  Dialogs.java
mortar-gui/app/src/main/java/mortar/gui/map/: LoadMapWindow.java  MapView.java  MapWindow.java
mortar-gui/app/src/test/java/mortar/gui/: AppTest.java
mortar-pico/: CMakeLists.txt  mortar.c
mortar-qt/: CMakeLists.txt  serialconnection.cpp
mortar_arduino/: mortar_arduino.ino
mortar_pico/: .pylintrc  micropy.json
mortar_pico/src/: PicoRobotics.py  main.py
mortar_pico/src/mortar/: math.py  ports.py  trigger.py
